Archivos del portafolio edit banner1

--- a/css/banner.css
+++ b/css/banner.css
@@ -35,7 +35,7 @@
 }
 
 .banner__persona{
-    background-image: url(./img/Kari_profile.png);
+    background-image: url(../img/Kari_profile.png);
     background-position: right;
     background-size: 100%;
     background-repeat: no-repeat;
